test/scc/expr/semantic-errors/168.a
168.t:3:5: error: 'offsetof' requires struct or union type